[gd_scene load_steps=14 format=3 uid="uid://bu5fy0roo6g4j"]

[ext_resource type="Texture2D" uid="uid://dpeb8egh27bt6" path="res://Assets/Images/Menus/Panels/PanelHQ.png" id="1_6xu6n"]
[ext_resource type="Script" path="res://Assets/Levels/UI/MainMenuLoadGame/LoadGame.gd" id="1_uqax8"]
[ext_resource type="Texture2D" uid="uid://cp05egbg0061x" path="res://Assets/Images/Menus/Buttons/Button_Confirm.png" id="2_1ytg7"]
[ext_resource type="Texture2D" uid="uid://bivu8sir28qdk" path="res://Assets/Images/Menus/Buttons/Button.png" id="3_rlpwx"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_fq3ih"]
texture = ExtResource("1_6xu6n")
modulate_color = Color(0.745098, 0.745098, 0.745098, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_rf58g"]
texture = ExtResource("2_1ytg7")
expand_margin_left = 50.0
expand_margin_top = 20.0
expand_margin_right = 50.0
expand_margin_bottom = 20.0

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_o02bx"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_fowef"]
texture = ExtResource("3_rlpwx")
texture_margin_left = 50.0
texture_margin_top = 20.0
texture_margin_right = 50.0
texture_margin_bottom = 20.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_j6c03"]
texture = ExtResource("2_1ytg7")
expand_margin_left = 50.0
expand_margin_top = 20.0
expand_margin_right = 50.0
expand_margin_bottom = 20.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_mum3t"]
texture = ExtResource("3_rlpwx")
expand_margin_left = 50.0
expand_margin_top = 20.0
expand_margin_right = 50.0
expand_margin_bottom = 20.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_amcyy"]
texture = ExtResource("3_rlpwx")
expand_margin_left = 50.0
expand_margin_top = 20.0
expand_margin_right = 50.0
expand_margin_bottom = 20.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_xrn0s"]
texture = ExtResource("3_rlpwx")
expand_margin_left = 50.0
expand_margin_top = 20.0
expand_margin_right = 50.0
expand_margin_bottom = 20.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_47a84"]
texture = ExtResource("3_rlpwx")
expand_margin_left = 50.0
expand_margin_top = 20.0
expand_margin_right = 50.0
expand_margin_bottom = 20.0

[node name="LoadGame" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_uqax8")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_fq3ih")

[node name="BackToHome" type="Button" parent="Panel"]
offset_left = 522.0
offset_top = 600.0
offset_right = 649.0
offset_bottom = 623.0
size_flags_horizontal = 4
size_flags_vertical = 2
theme_override_styles/focus = SubResource("StyleBoxTexture_rf58g")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_o02bx")
theme_override_styles/hover_pressed = SubResource("StyleBoxTexture_fowef")
theme_override_styles/hover = SubResource("StyleBoxTexture_j6c03")
theme_override_styles/pressed = SubResource("StyleBoxTexture_mum3t")
theme_override_styles/normal_mirrored = SubResource("StyleBoxTexture_amcyy")
theme_override_styles/normal = SubResource("StyleBoxTexture_mum3t")
text = "Back To Menu"

[node name="LoadLocalLevel" type="Button" parent="Panel"]
offset_left = 754.0
offset_top = 216.0
offset_right = 881.0
offset_bottom = 239.0
size_flags_horizontal = 4
size_flags_vertical = 2
theme_override_styles/focus = SubResource("StyleBoxTexture_rf58g")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_o02bx")
theme_override_styles/hover_pressed = SubResource("StyleBoxTexture_fowef")
theme_override_styles/hover = SubResource("StyleBoxTexture_j6c03")
theme_override_styles/pressed = SubResource("StyleBoxTexture_mum3t")
theme_override_styles/normal_mirrored = SubResource("StyleBoxTexture_amcyy")
theme_override_styles/normal = SubResource("StyleBoxTexture_mum3t")
text = "Load Local Level"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 222.0
offset_top = 216.0
offset_right = 356.0
offset_bottom = 320.0
theme_override_constants/separation = 50

[node name="SetRoomID" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 2
theme_override_styles/focus = SubResource("StyleBoxTexture_rf58g")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_o02bx")
theme_override_styles/hover_pressed = SubResource("StyleBoxTexture_fowef")
theme_override_styles/hover = SubResource("StyleBoxTexture_j6c03")
theme_override_styles/pressed = SubResource("StyleBoxTexture_mum3t")
theme_override_styles/normal_mirrored = SubResource("StyleBoxTexture_amcyy")
theme_override_styles/normal = SubResource("StyleBoxTexture_mum3t")
text = "Join"

[node name="LineEdit" type="LineEdit" parent="VBoxContainer"]
layout_mode = 2
theme_override_styles/focus = SubResource("StyleBoxTexture_xrn0s")
theme_override_styles/normal = SubResource("StyleBoxTexture_47a84")
placeholder_text = "Input Room ID..."
max_length = 6
expand_to_text_length = true
caret_blink = true
caret_blink_interval = 0.1

[connection signal="pressed" from="Panel/BackToHome" to="." method="_on_back_to_home_pressed"]
[connection signal="pressed" from="Panel/LoadLocalLevel" to="." method="_on_load_local_level_pressed"]
[connection signal="pressed" from="VBoxContainer/SetRoomID" to="." method="_on_set_room_id_pressed"]
[connection signal="text_submitted" from="VBoxContainer/LineEdit" to="." method="_on_line_edit_text_submitted"]
